addons/rollout/fluxcd/manifests/ingress-traefik/rollout-ingress-traefik.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-traefik-cluster-local
  namespace: rollout
spec:
  ingressClassName: traefik
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
            path: /hook
            pathType: Prefix
